Sat Oct 18 13:40:27 2008  Tanaka Akira  <akr@fsij.org>

	* lib/test/unit.rb (assert_nothing_thrown): implemented.

Sat Oct 18 01:33:22 2008  WATANABE Hirofumi  <eban@ruby-lang.org>

	* common.mk: use added options for generic_erb.rb.

Sat Oct 18 00:47:51 2008  wanabe  <s.wanabe@gmail.com>

	* array.c: don't recycle shared-array while sort!.

Fri Oct 17 22:04:38 2008  wanabe  <s.wanabe@gmail.com>

	* array.c: recycle shared-array when it isn't referenced.

Fri Oct 17 19:46:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/ifchange, win32/ifchange.bat: --timestamp option added.

	* tool/generic_erb.rb: --timestamp, --output and --if-change options
	  added.

Fri Oct 17 18:33:12 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* array.c (ary_resize_capa): renamed RESIZE_CAPA.

Fri Oct 17 18:16:51 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/bigdecimal/test_bigdecimal.rb (TestBigDecimal#test_sqrt_bigdecimal): 
	  test updated.  a patch from TAKANO Mitsuhiro <takano32 at jus.or.jp> in
	  [ruby-dev:36736].

Fri Oct 17 18:14:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (uncommon.mk): ignores failures at loading.

	* test/rubygems/gemutilities.rb (RubyGemTestCase#build_rake_in):
	  get rid of interference with other tests.

Fri Oct 17 18:06:39 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* transcode.c (str_transcode0): String#encode without argument now
	  behave as if :undef => :replace, :invalid => :replace specified.

	* transcode.c (rb_econv_prepare_opts): should preserve options in
	  any case.

Fri Oct 17 11:48:18 2008  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/socket/socket.c (init_sock): sockets should be binmode.

	* test/socket/test_tcp.rb (test_encoding): ditto.

Fri Oct 17 10:26:13 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/insns2vm.rb: remove -Kn option in shebang line because it's
	  inconsistent with -Ks commandline option in common.mk.

Fri Oct 17 01:26:09 2008  Tanaka Akira  <akr@fsij.org>
